  - changed default airspace colors
    (closer to the German ICAO charts)
  - adjusted default terrain brightness and contrast
  - changed airport symbol default to "traffic lights"
    (more intuitive and easier to interpret)
  - show full waypoint names by default
  - show reachable airport names outlined
    (less clutter than the rounded rectangles)
* devices
  - LX1600 configuration dialog
* calculations
  - more robust landing detection
    (2 min threshold instead of 10 sec)
* development
  - vagrant support
  - TravisCI support

Version 6.6.1 - 2013/05/08
* cross section
  - fix airspace display after display rotation (#2825)
* user interface
  - fix malformed name in airspace warning dialog (#2813)
  - don't lost focus to waypoint list on Altair (#2835)
  - don't forget map zoom when returning to map (#2805)
* devices
  - indicate duplicate devices in list
  - allow using more than one TCP/UDP device
  - fix spurious errors after IOIO baud rate change (#2733, #2754)
  - K6Bt: fix configured baud rate setup on Android (#2836)
* tasks
  - prevent moving target out of the cylinder (#2794)
* configuration
  - fix regression with polar configuration (#2803)
* support gcc 4.8

Version 6.6 - 2013/04/23
* map
  - optional distinct map zoom on each page (#1603)
  - add label selection "Task waypoints & airfields"
  - allow configuration of "Final glide bar" display (#2554)
  - new snail trail option "Vario-scaled dots and lines"
  - topography icons
  - don't draw pan info over north arrow (#2765)
* cross section
  - show airspace names (#1149, #2390)
  - use glide polar instead of current glide ratio (#2687)
* infoboxes
  - green InfoBox distance when inside observation zone (#2560)
  - limit the InfoBox aspect ratio
  - new InfoBox styles "Shaded" (#1852), "Glass" (#2466)
  - waypoint details button in target dialog (#1967)
  - show distance in radial InfoBox comment (#2577)
  - new InfoBox "ATC radial" with distance in nautical miles (#2269, #2706)